# personalAgent

./: .env.example  .gitignore  CLAUDE_CODE_INTEGRATION_PLAN.md  IMPLEMENTATION_STATUS.md  INVESTIGACION_TERMINAL_CONTROL.md  PROACTIVITY_DESIGN.md  README.md  TUTORIAL.md  V03_SIMPLIFIED_PLAN.md  build-dashboard.sh  claude.md  proactividad.txt  pyproject.toml  sendellguia.txt  terminal_detection_report.json  test_chat_reminders.py  test_claude_endpoints.py  test_notification.py  test_project_scanner.py  test_pyside6_performance.py  test_snooze_dismiss.py  test_terminal_detection.py  test_vscode_integration.py  test_vscode_monitor.py  test_vscode_simple.py  test_websocket_simple.py
.claude/: settings.local.json
.sendell/: bridge.json
archive/phase6-research/: README.md
archive/phase6-research/code-experiments/: epic_dashboard.py  test_dashboard.py
archive/phase6-research/handoff/: HANDOFF_PHASE6.md
archive/phase6-research/investigation/: PHASE6_RESEARCH_GUIDE.md  guidefase6refactorultraterminals.txt
archive/phase6-research/testing/: GUIA_TESTING_FASE6_ES.md  PHASE5_TESTING.md  PHASE6_COMPLETE_TEST_GUIDE.md  PHASE6_TESTING.md  TEST_FLUJOS_USUARIO.md
docs/: ANALISIS_CRITICO_SENDELL.md  ARCHITECTURE.md  FASE1_TERMINAL_REFACTOR.md  INSTALLATION_HYBRID.md  PTY_REFACTOR_SUMMARY.md  README_DOCS.md
docs/archive/: COMMIT_MESSAGE.txt  MIGRATION_PLAN_ANGULAR.md  MISSING_INTEGRATION.md  VSCODE_INTEGRATION_README.md
docs/core/: NEXT_SESSION_PLAN.md  TERMINAL_ISSUES.md
docs/plans/: V03_RESUMEN.md
docs/research/: angular-terminal-complete-guide.txt  asciiguia.txt  iapersonal.txt  investigacionterminalsguide.txt  langgraph.txt  researchxtermjs.txt
sendell-dashboard/: README.md  angular.json  package-lock.json  package.json  proxy.conf.json
sendell-dashboard/src/: index.html  styles.scss
sendell-dashboard/src/app/: app.html  app.scss  app.spec.ts  app.ts
sendell-dashboard/src/app/components/: activity-graph.component.ts  terminal.component.html  terminal.component.scss  terminal.component.ts
sendell-dashboard/src/app/core/models/: claude-terminal.model.ts  fact.model.ts  project.model.ts
sendell-dashboard/src/app/core/services/: api.service.ts  claude-terminals.service.ts  terminal.service.ts  websocket.service.ts
sendell-vscode-extension/: README.md  package.json
sendell-vscode-extension/src/: extension.ts  logger.ts  terminal.ts  types.ts  websocket.ts
src/sendell/: __init__.py  __main__.py  config.py
src/sendell/agent/: brain_gui.py  brain_gui_qt.py  core.py  memory.py  prompts.py
src/sendell/dashboard/: __init__.py  project_control.py  project_control_qt.py
src/sendell/dashboard/components/: __init__.py  activity_graph.py  activity_graph_qt.py
src/sendell/dashboard/legacy/: project_control_qt.py  qt_tkinter_bridge.py
src/sendell/dashboard/utils/: __init__.py  colors.py
src/sendell/device/: automation.py  monitor.py
src/sendell/device/platform/: windows.py
src/sendell/mcp/: server.py
src/sendell/mcp/tools/: conversation.py  monitoring.py  process.py
src/sendell/proactive/: __init__.py  identity.py  proactive_loop.py  reminder_actions.py  reminders.py  temporal_clock.py
src/sendell/project_manager/: __init__.py  bridge.py  project_states.py
src/sendell/projects/: __init__.py  models.py  parsers.py  scanner.py  types.py
src/sendell/security/: permissions.py
src/sendell/terminal_control/: __init__.py  detector.py  executor.py
src/sendell/terminal_manager/: __init__.py  manager.py  process.py  types.py
src/sendell/ui/: __init__.py  animated_ascii.py  animation_engine.py  ascii_art.py  notification_window.py
src/sendell/utils/: errors.py  logger.py
src/sendell/vscode/: __init__.py  process_detector.py  terminal_finder.py  window_matcher.py  workspace_parser.py
src/sendell/vscode_integration/: __init__.py  manager.py  tools.py  types.py  websocket_server.py
src/sendell/web/: __init__.py  background.py  routes.py  server.py  server_tracker.py  websocket.py
src/sendell/web/static/browser/: index.html  main-363KT2P5.js  main-3MRJBE7H.js  main-546IOLZA.js  main-57BEKSLZ.js  main-7IMNVKJR.js  main-CZQSVF3T.js  main-R3H27GS7.js  main-UZRUC2RV.js  main-WN7DZXHB.js  styles-FHOK3CW5.css  styles-M4AJHPGE.css
